--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
     - main
+  pull_request:
+    branches:
+    - '*'
 
 permissions:
   contents: write
@@ -30,5 +33,7 @@ jobs:
         # Show alert with commit comment on detecting possible performance regression
         alert-threshold: '110%'
         comment-on-alert: true
+        # Enable Job Summary for PRs
+        summary-always: true
         fail-on-alert: true
         alert-comment-cc-users: '@pmalek'
