--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -32,5 +32,5 @@ jobs:
         comment-on-alert: true
         # Enable Job Summary for PRs
         summary-always: false
-        fail-on-alert: true
+        fail-on-alert: false
         alert-comment-cc-users: '@pmalek'
