--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -2,7 +2,7 @@ name: Bench
 on:
   push:
     branches:
-    - main
+    - '*'
 
 permissions:
   contents: write
@@ -29,8 +29,10 @@ jobs:
         auto-push: true
         # Show alert with commit comment on detecting possible performance regression
         alert-threshold: '110%'
-        comment-on-alert: true
-        # Enable Job Summary for PRs
-        summary-always: false
-        fail-on-alert: false
         alert-comment-cc-users: '@pmalek'
+        comment-always: true
+        comment-on-alert: true
+
+        # Enable Job Summary for PRs
+        summary-always: true
+        fail-on-alert: false
