--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -30,7 +30,7 @@ jobs:
         # Show alert with commit comment on detecting possible performance regression
         alert-threshold: '110%'
         alert-comment-cc-users: '@pmalek'
-        comment-always: true
+        comment-always: false
         comment-on-alert: true
 
         # Enable Job Summary for PRs
