--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/setup-go@v4
 
     - name: Run benchmark
-      run: go test -bench '.*' | tee bench.out
+      run: go test -bench '.*' -benchmem | tee bench.out
 
     - name: Store benchmark result
       uses: benchmark-action/github-action-benchmark@v1
