--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -10,12 +10,16 @@ concurrency:
 on:
   pull_request:
     branches:
-    - '*'
+    - '**'
   push:
     branches:
     - 'main'
+    - 'release/[0-9]+.[0-9]+.[0-9]+'
+    - 'release/[0-9]+.[0-9]+.[0-9]+-alpha.[0-9]+'
+    - 'release/[0-9]+.[0-9]+.[0-9]+-beta.[0-9]+'
+    - 'release/[0-9]+.[0-9]+.[0-9]+-rc.[0-9]+'
     tags:
-    - '*'
+    - '**'
   workflow_dispatch: {}
 
 jobs:
