--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -51,3 +51,4 @@ jobs:
           comment-on-alert: true
           # Enable Job Summary for PRs
           summary-always: true
+          comment-always: true
