--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -32,7 +32,7 @@ jobs:
         id: cache-restore
         uses: actions/cache/restore@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
         with:
-          path: ./cache
+          path: benchmark-data.json
           key: ${{ runner.os }}-go-benchmark
 
       - name: Compare benchmark result
@@ -43,7 +43,7 @@ jobs:
           # Where the output from the benchmark tool is stored
           output-file-path: ${{ github.sha }}_bench_output.txt
           # Where the previous data file is stored
-          external-data-json-path: ./cache/benchmark-data.json
+          external-data-json-path: ./benchmark-data.json
           # Do not save the data
           save-data-file: false
           # Workflow will fail when an alert happens
