--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -25,9 +25,9 @@ jobs:
 
       # Download previous benchmark result from cache
       - name: Download previous benchmark data
-        id: cache-restore
         uses: actions/cache/restore@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
         with:
+          fail-on-cache-miss: true
           path: ./cache/benchmark-data.json
           key: ${{ runner.os }}-go-benchmark
 
