--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,8 +40,9 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           comment-on-alert: true
 
-      - name: Save benchmark data
-        uses: actions/cache/save@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
+      - name: Save benchmark data without cache
+        uses: actions/upload-artifact@v3
         with:
+          name: benchmark-main
           path: ./cache/benchmark-data.json
-          key: ${{ runner.os }}-go-benchmark
+          if-no-files-found: error
