--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -5,8 +5,39 @@ on:
       - main
 
 jobs:
-  go-bench:
+  bench-main:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v3.5.2
+        ref: main
+
+      - uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4.1.0
+        with:
+          go-version-file: './go.mod'
+          cache-dependency-path: './go.sum'
+          check-latest: true
+
+      - name: Run benchmark of main
+        run: |
+          set -o pipefail
+          make bench | tee main_bench_output.txt
+
+      - name: Store benchmark result of main
+        uses: benchmark-action/github-action-benchmark@70405016b032d44f409e4b1b451c40215cbe2393 # v1.18.0
+        with:
+          # What benchmark tool the output.txt came from
+          tool: 'go'
+          # Where the output from the benchmark tool is stored
+          output-file-path: main_bench_output.txt
+          # Where the output from the benchmark will be stored
+          external-data-json-path: ./main_bench_output.json
+          save-data-file: true
+          fail-on-alert: false
+
+  bench-PR:
+    runs-on: ubuntu-latest
+    needs: [bench-main]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v3.5.2
@@ -17,17 +48,10 @@ jobs:
           cache-dependency-path: './go.sum'
           check-latest: true
 
-      # Run benchmark with `go test -bench` and stores the output to a file
-      - name: Run benchmark
+      - name: Run benchmark of PR
         run: |
           set -o pipefail
           make bench | tee ${{ github.sha }}_bench_output.txt
-
-      # Download previous benchmark result
-      - name: Download previous benchmark data
-        uses: actions/download-artifact@v3
-        with:
-          name: benchmark-main
 
       - name: Compare benchmark result
         uses: benchmark-action/github-action-benchmark@70405016b032d44f409e4b1b451c40215cbe2393 # v1.18.0
@@ -37,7 +61,7 @@ jobs:
           # Where the output from the benchmark tool is stored
           output-file-path: ${{ github.sha }}_bench_output.txt
           # Where the previous data file is stored
-          external-data-json-path: ./cache/benchmark-data.json
+          external-data-json-path: ./main_bench_output.json
           # Do not save the data
           save-data-file: false
           # Workflow will fail when an alert happens
