--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -57,13 +57,16 @@ jobs:
         run: |
           set -o pipefail
           make bench | tee ${{ github.sha }}_bench_output.txt
+  compare-pr:
+    runs-on: ubuntu-latest
+    needs: [bench-main, bench-pr]
+    timeout-minutes: 15
+    steps:
 
-      - name: Downloads benchmarks from main
-        needs: [bench-main]
+      - name: Downloads benchmarks
         uses: actions/download-artifact@v3
         with:
           name: main_bench_output
-          path: ./main_bench_output.json
 
       - name: Compare benchmark result
         uses: benchmark-action/github-action-benchmark@70405016b032d44f409e4b1b451c40215cbe2393 # v1.18.0
