--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -38,7 +38,7 @@ jobs:
           fail-on-alert: false
       - uses: actions/upload-artifact@v3
         with:
-          name: main_bench_output
+          name: benchmarks
           path: ./main_bench_output.json
 
   bench-PR:
@@ -57,6 +57,10 @@ jobs:
         run: |
           set -o pipefail
           make bench | tee ${{ github.sha }}_bench_output.txt
+      - uses: actions/upload-artifact@v3
+        with:
+          name: benchmarks
+          path: ${{ github.sha }}_bench_output.txt
   compare-pr:
     runs-on: ubuntu-latest
     needs: [bench-main, bench-pr]
@@ -66,7 +70,7 @@ jobs:
       - name: Downloads benchmarks
         uses: actions/download-artifact@v3
         with:
-          name: main_bench_output
+          name: benchmarks
 
       - name: Compare benchmark result
         uses: benchmark-action/github-action-benchmark@70405016b032d44f409e4b1b451c40215cbe2393 # v1.18.0
