--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,4 +44,4 @@ jobs:
         uses: actions/cache/save@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
         with:
           path: ./cache/benchmark-data.json
-          key: ${{ runner.os }}-go-benchmark
+          key: ${{ github.sha }}-go-benchmark
