--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -19,28 +19,25 @@ jobs:
           cache-dependency-path: './go.sum'
           check-latest: true
 
-      # Run benchmark with `go test -bench` and stores the output to a file
-      - name: Run benchmark
+      - name: Run benchmark on PR
         run: |
           set -o pipefail
           make bench | tee ${{ github.sha }}_bench_output.txt
 
-      - name: Get Main Branch SHA
+      - name: Get Main branch SHA
         id: get-main-branch-sha
         run: |
           SHA=$(git rev-parse origin/main)
           echo "::set-output name=sha::$SHA"
 
-
-      # Download previous benchmark result from cache
-      - name: Download previous benchmark data
+      - name: Download benchmark from Main
         uses: actions/cache/restore@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
         with:
           fail-on-cache-miss: true
           path: ./cache/benchmark-data.json
           key: ${{ steps.get-main-branch-sha.outputs.sha }}-go-benchmark
 
-      - name: Compare benchmark result
+      - name: Compare benchmarks
         uses: benchmark-action/github-action-benchmark@70405016b032d44f409e4b1b451c40215cbe2393 # v1.18.0
         with:
           # What benchmark tool the output.txt came from
