--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -5,7 +5,7 @@ on:
       - main
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   go-bench:
@@ -55,6 +55,4 @@ jobs:
           fail-on-alert: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
           comment-on-alert: true
-          # Enable Job Summary for PRs
           summary-always: true
-          comment-always: true
