--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -54,5 +54,5 @@ jobs:
           # Workflow will fail when an alert happens
           fail-on-alert: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          comment-on-alert: true
+          # Enable Job Summary for PRs
           summary-always: true
