--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,10 +39,14 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           comment-on-alert: true
 
+      - name: Get CPU information
+        uses: kenchan0130/actions-system-info@master
+        id: system-info
+
       - name: Save benchmark JSON
         uses: actions/cache/save@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
         with:
           path: ./cache/benchmark-data.json
           # Save with commit hash to avoid "cache already exists"
-          # Save with OS to prevent comparing against results from different CPUs
-          key: ${{ github.sha }}-${{ runner.os }}-go-benchmark
+          # Save with OS & CPU info to prevent comparing against results from different CPUs
+          key: ${{ github.sha }}-${{ runner.os }}-${{ steps.system-info.outputs.cpu-model }}-go-benchmark
