--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -27,6 +27,10 @@ jobs:
           set -o pipefail
           make bench | tee ${{ github.sha }}_bench_output.txt
 
+      - name: Get CPU information
+        uses: kenchan0130/actions-system-info@master
+        id: system-info
+
       - name: Get Main branch SHA
         id: get-main-branch-sha
         run: |
@@ -38,7 +42,7 @@ jobs:
         id: cache
         with:
           path: ./cache/benchmark-data.json
-          key: ${{ steps.get-main-branch-sha.outputs.sha }}-${{ runner.os }}-go-benchmark
+          key: ${{ steps.get-main-branch-sha.outputs.sha }}-${{ runner.os }}-${{ steps.system-info.outputs.cpu-model }}-go-benchmark
 
       - name: Compare benchmarks with Main
         uses: benchmark-action/github-action-benchmark@v1
